Fix jumping cursor in "cliche" and "stamp" inputs *css fix for WorkCenterNoteRow

--- a/src/main/webapp/WEB-INF/resources/css/newProduct.css
+++ b/src/main/webapp/WEB-INF/resources/css/newProduct.css
@@ -553,6 +553,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .middle_table > tbody > tr > .notes_all > .notes_inputs > .note_input_1 {
+    outline: none;
     float: left;
     padding-left: 5px;
     word-break: break-all;
